refactor : changed spell error in footer

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <footer class="flex-layout flex-center flex-space-btwn">
         <div>
-            <span>made with by ❤️ <a class="txt-md" href="https://github.com/samyukthasudhakar  ">Samyuktha Sudhakar</a></span>
+            <span>made with ❤️ by  <a class="txt-md" href="https://github.com/samyukthasudhakar  ">Samyuktha Sudhakar</a></span>
         </div>
         <div>
             <a class="footer-icon" href=""><i class="fa fa-linkedin"></i></a>
