refactor : changed rules pointer from arrow to hand

--- a/rules.html
+++ b/rules.html
@@ -27,34 +27,34 @@
         <h3>Rules</h3>
         <div class="flex-col-space-btwn rules-container">
             <span>
-                ➡️ Each question is of multiple-choice format, with only one 
+                👉 Each question is of multiple-choice format, with only one 
             right answer per question.
             </span>
             <span>
-                ➡️ Read the question carefully, and click on the option to select
+                👉 Read the question carefully, and click on the option to select
             it as the answer for the question.
             </span>
             <span>
-                ➡️ After responding to the last question, click on "Submit" to end
+                👉 After responding to the last question, click on "Submit" to end
             the quiz and view the results.
             </span>
             <span>
-                ➡️ If you want to change the option selected you can do that by
+                👉 If you want to change the option selected you can do that by
             selecting a different option to which you want to change it to.
             </span>
             <span>
-                ➡️ The total score is computed based on your answers to all the 
+                👉 The total score is computed based on your answers to all the 
             questions.
             </span>
             <span>
-                ➡️ For every correct answer you get +5 points and no negative points
+                👉 For every correct answer you get +5 points and no negative points
             for wrong answers.
             </span>
             <span>
-                ➡️ Un-answered questions do not lead to point deduction.
+                👉 Un-answered questions do not lead to point deduction.
             </span>
         </div>
-        <a class="link-btn txt-center mg-1" href="categories.html">Start Quiz !</a>
+        <a class="link-btn txt-center mg-1" href="questions.html">Start Quiz !</a>
     </div>
 
 </body>
