--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <title>Quiz App | Home</title>
 </head>
 <body>
-    <header class="flex-space-btwn header-container">
+    <header class="flex-space-btwn flex-center header-container">
         <div class="flex-center">
             <h3 class="text-highlight">HopScotch</h3>
         </div>
 
-        <nav class="flex-layout flex-space-btwn">
-            <a class="mg-rl-1"  href="index.html"><img class="icon-img" src="assets/images/home.png" title="Home" alt="home icon image"></a>
-            <a class="mg-rl-1"  href="rules.html"><img class="icon-img" src="assets/images/rules.png" title="Rules" alt="rules icon image"></a>
-            <a class="mg-rl-1"  href="categories.html"><img class="icon-img" src="assets/images/menu.png" title="Categories" alt="categories icon image"></a>
-            <a class="mg-rl-1"  href="login.html"><img class="icon-img" src="assets/images/user.png" title="Profile" alt="user icon image"></a>
+        <nav class="flex-layout flex-center flex-space-btwn">
+            <a class="mg-rl-1 txt-md a-link"  href="index.html">Home</a>
+            <a class="mg-rl-1 txt-md a-link"  href="rules.html">Rules</a>
+            <a class="mg-rl-1 txt-md a-link"  href="categories.html">Categories</a>
+            <button id="toggle-btn" class="mg-rl-1 btn-img" value="dark-mode"><img src="assets/images/dark_mode.svg"></a>
         </nav>
     </header>
 
@@ -37,13 +37,14 @@
 
     <footer class="flex-layout flex-center flex-space-btwn">
         <div>
-            <span>made with ❤️ by  <a class="txt-md" href="https://github.com/samyukthasudhakar  ">Samyuktha Sudhakar</a></span>
+            <span>made with ❤️ by  <a class="txt-md" href="https://github.com/samyukthasudhakar">Samyuktha Sudhakar</a></span>
         </div>
         <div>
-            <a class="footer-icon" href=""><i class="fa fa-linkedin"></i></a>
-            <a class="footer-icon" href=""><i class="fa fa-twitter"></i></a>
-            <a class="footer-icon" href=""><i class="fa fa-github"></i></a>
+            <a class="footer-icon a-link" href=""><i class="fa fa-linkedin"></i></a>
+            <a class="footer-icon a-link" href=""><i class="fa fa-twitter"></i></a>
+            <a class="footer-icon a-link" href="https://github.com/samyukthasudhakar"><i class="fa fa-github"></i></a>
         </div>
     </footer>
+    <script src="app.js"></script>
 </body>
 </html>
