--- a/rules.html
+++ b/rules.html
@@ -24,38 +24,33 @@
     </header>
 
     <div class="flex-column flex-center">
-        <h3>Rules</h3>
-        <div class="flex-col-space-btwn rules-container">
-            <span>
-                👉 Each question is of multiple-choice format, with only one 
-            right answer per question.
-            </span>
-            <span>
-                👉 Read the question carefully, and click on the option to select
-            it as the answer for the question.
-            </span>
-            <span>
-                👉 After responding to the last question, click on "Submit" to end
-            the quiz and view the results.
-            </span>
-            <span>
-                👉 If you want to change the option selected you can do that by
-            selecting a different option to which you want to change it to.
-            </span>
-            <span>
-                👉 The total score is computed based on your answers to all the 
-            questions.
-            </span>
-            <span>
-                👉 For every correct answer you get +5 points and no negative points
-            for wrong answers.
-            </span>
-            <span>
-                👉 Un-answered questions do not lead to point deduction.
-            </span>
+        <div class="flex-space-btwn flex-center rules-container">
+            <h3>Rules</h3>
+            <div class="rules flex-col-space-btwn">
+                <span>
+                    👉 Each question is of multiple-choice format, with only one 
+                right answer per question.
+                </span>
+                <span>
+                    👉 Read the question carefully, and click on the option to select
+                it as the answer for the question.
+                </span>
+                <span>
+                    👉 After responding to the last question, click on "Submit" to end
+                the quiz and view the results.
+                </span>
+                <span>
+                    👉 For every correct answer you get +5 points and no negative points
+                for wrong answers.
+                </span>
+                <span>
+                    👉 Un-answered questions do not lead to point deduction.
+                </span>
+            </div>
+            <a class="link-btn txt-center mg-1" href="questions.html">Start Quiz !</a>
         </div>
-        <a class="link-btn txt-center mg-1" href="questions.html">Start Quiz !</a>
     </div>
 
+    <script src="app.js"></script>
 </body>
 </html>
