refactor : add script file to make theme toggle work

--- a/questions.html
+++ b/questions.html
@@ -22,6 +22,7 @@
             <button id="toggle-btn" class="mg-rl-1 btn-img" value="dark-mode"><img src="assets/images/dark_mode.svg"></a>
         </nav>
     </header>
+
     <div class="flex-column flex-center">
         <div>
             <h3>Science Quiz</h3>
@@ -82,5 +83,7 @@
         </div>
         <a class="link-btn" href="score.html">Submit</a>
     </div>
+    
+    <script src="app.js"></script>
 </body>
 </html>
