--- a/score.html
+++ b/score.html
@@ -87,5 +87,7 @@
         </div>
         <a class="link-btn" href="categories.html">Take a new quiz</a>
     </div>
+
+    <script src="app.js"></script>
 </body>
 </html>
