refactor : fixed in app.js

--- a/categories.html
+++ b/categories.html
@@ -15,7 +15,7 @@
             <h3 class="text-highlight">HopScotch</h3>
         </div>
 
-        <nav class="flex-layout flex-center">
+        <nav class="flex-layout flex-center flex-space-btwn">
             <a class="mg-rl-1 txt-md a-link"  href="index.html">Home</a>
             <a class="mg-rl-1 txt-md a-link"  href="rules.html">Rules</a>
             <a class="mg-rl-1 txt-md a-link"  href="categories.html">Categories</a>
