refactor : responsive nav bar

--- a/index.html
+++ b/index.html
@@ -14,23 +14,21 @@
         <div class="flex-center">
             <h3 class="text-highlight">HopScotch</h3>
         </div>
-
-        <nav class="flex-layout flex-center flex-space-btwn">
-            <a class="mg-rl-1 txt-md a-link"  href="index.html">Home</a>
-            <a class="mg-rl-1 txt-md a-link"  href="rules.html">Rules</a>
-            <a class="mg-rl-1 txt-md a-link"  href="categories.html">Categories</a>
+        <button class="menu-btn"><i class="fa fa-bars"></i></button>
+        <nav class="nav-pill-container flex-layout flex-center flex-space-btwn">
+            <a class="mg-rl-1 txt-md a-link nav-link"  href="index.html">Home</a>
+            <a class="mg-rl-1 txt-md a-link nav-link"  href="rules.html">Rules</a>
+            <a class="mg-rl-1 txt-md a-link nav-link"  href="categories.html">Categories</a>
             <button id="toggle-btn" class="mg-rl-1 btn-img" value="dark-mode"><img src="assets/images/dark_mode.svg"></a>
         </nav>
     </header>
 
     <div class="flex-layout flex-center intro-container">
+        <img class="intro-img" src="assets/images/creativity-animate.svg" alt="hero image">
         <div class="flex-col-space-btwn intro-text">
             <h1>🥇Quiz App</h1>
             <h2>Unlocking knowledge at the speed of thought.</h2>
             <a class="link-btn" href="categories.html">Get Started !</a>
-        </div>
-        <div>
-            <img class="intro-img" src="assets/images/creativity-animate.svg" alt="hero image">
         </div>
     </div>
 
