--- a/score.html
+++ b/score.html
@@ -14,11 +14,11 @@
         <div class="flex-center">
             <h3 class="text-highlight">HopScotch</h3>
         </div>
-
-        <nav class="flex-layout flex-center flex-space-btwn">
-            <a class="mg-rl-1 txt-md a-link"  href="index.html">Home</a>
-            <a class="mg-rl-1 txt-md a-link"  href="rules.html">Rules</a>
-            <a class="mg-rl-1 txt-md a-link"  href="categories.html">Categories</a>
+        <button class="menu-btn"><i class="fa fa-bars"></i></button>
+        <nav class="nav-pill-container flex-layout flex-center flex-space-btwn">
+            <a class="mg-rl-1 txt-md a-link nav-link"  href="index.html">Home</a>
+            <a class="mg-rl-1 txt-md a-link nav-link"  href="rules.html">Rules</a>
+            <a class="mg-rl-1 txt-md a-link nav-link"  href="categories.html">Categories</a>
             <button id="toggle-btn" class="mg-rl-1 btn-img" value="dark-mode"><img src="assets/images/dark_mode.svg"></a>
         </nav>
     </header>
