refactor : added correct titles for each page

--- a/categories.html
+++ b/categories.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href=https://breezeui.netlify.app/styles/breezeUI.css>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="main.css">
-    <title>Quiz App | Home</title>
+    <title>Quiz App | Categories</title>
 </head>
 <body>
     <header class="flex-space-btwn flex-center header-container">
