--- a/questions.html
+++ b/questions.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href=https://breezeui.netlify.app/styles/breezeUI.css>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="main.css">
-    <title>Quiz App | Home</title>
+    <title>Quiz App | Questions</title>
 </head>
 <body>
     <header class="flex-space-btwn flex-center header-container">
@@ -22,7 +22,7 @@
             <button id="toggle-btn" class="mg-rl-1 btn-img" value="dark-mode"><img src="assets/images/dark_mode.svg"></a>
         </nav>
     </header>
-    
+
     <div class="flex-column flex-center">
         <div>
             <h3>Science Quiz</h3>
