refactor : minor style related changes

--- a/categories.html
+++ b/categories.html
@@ -24,7 +24,7 @@
     </header>
 
     <div class="flex-column flex-center">
-        <h3>Categories</h3>
+        <h3 class="mg-t-1">Categories</h3>
         <div class="flex-layout flex-center category-container">
             <a class="txt-md" href="rules.html">
                 <div class="flex-col-space-btwn category-card mg-1">
