--- a/questions.html
+++ b/questions.html
@@ -25,7 +25,7 @@
 
     <div class="flex-column flex-center">
         <div>
-            <h3>Science Quiz</h3>
+            <h3 class="mg-t-1">Science Quiz</h3>
         </div>
         <div class="question-container">
             <h4>Question : 1/3</h4>
